--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "4.3.1",
-    "gatsby": "^2.13.51",
-    "gatsby-image": "^2.2.8",
+    "gatsby": "^2.14.1",
+    "gatsby-image": "^2.2.14",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-remark-images": "^3.1.19",
+    "gatsby-remark-prismjs": "^3.3.9",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-sharp": "^2.2.5",
+    "gatsby-transformer-remark": "^2.6.16",
+    "gatsby-transformer-json": "^2.2.6",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "prismjs": "^1.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
