--- a/package.json
+++ b/package.json
@@ -5,24 +5,26 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-remove-graphql-queries": "^2.7.5",
     "bootstrap": "4.3.1",
     "gatsby": "^2.14.1",
+    "gatsby-background-image": "^0.8.5",
     "gatsby-image": "^2.2.14",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.1.19",
     "gatsby-remark-prismjs": "^3.3.9",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.8",
-    "gatsby-transformer-sharp": "^2.2.5",
-    "gatsby-transformer-remark": "^2.6.16",
     "gatsby-transformer-json": "^2.2.6",
+    "gatsby-transformer-remark": "^2.6.16",
+    "gatsby-transformer-sharp": "^2.2.5",
     "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
     "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
@@ -48,7 +50,9 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+    "storybook": "NODE_ENV=production start-storybook -s public",
+    "build-storybook": "NODE_ENV=production build-storybook -s public"
   },
   "repository": {
     "type": "git",
