--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-remove-graphql-queries": "^2.7.22",
+    "babel-plugin-styled-components": "^1.10.7",
     "bootstrap": "4.3.1",
     "gatsby": "^2.18.21",
     "gatsby-background-image": "^0.9.12",
@@ -15,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.3.9",
+    "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-prismjs": "^3.3.30",
@@ -29,7 +31,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
