--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
+    "@hot-loader/react-dom": "^16.11.0",
     "@storybook/addon-actions": "^5.3.1",
     "@storybook/addon-links": "^5.3.1",
     "@storybook/addons": "^5.3.1",
